# nanoqwen

./: .gitignore  AGENTS.md  README.md  pyproject.toml
autoresearch/: README.md  __init__.py
dataset/: __init__.py  base.py  prepare.py  registry.py
docs/: attention_backends.md  pretrain_arch_compare.md
examples/: multiple_choice_tiny.jsonl  preferences_tiny.jsonl  prompts_tiny.jsonl  sft_tiny.jsonl
nanoqwen/: __init__.py  attention.py  checkpoint.py  config.py  data.py  dpo.py  eval.py  generation.py  gpt_model.py  hf_multimodal.py  hf_text.py  manual_text.py  model.py  nanogpt_model.py  optim.py  qwen35_model.py  qwen3_model.py  report.py  sft.py  tokenizer.py  ui.html
runs/: chat_web.sh  check.sh  download_qwen35_08b.sh  download_qwen3_06b.sh  dpo_smoke.sh  eval_smoke.sh  gpt_sft_smoke.sh  gpt_smoke.sh  hf_local_smoke.sh  qwen35_compare_smoke.sh  qwen35_dry_smoke.sh  qwen35_text_smoke.sh  qwen3_compare_smoke.sh  qwen3_dry_smoke.sh  qwen3_text_smoke.sh  report_smoke.sh  sft_smoke.sh  smoke.sh  tiny.sh
scripts/: __init__.py  chat_cli.py  chat_web.py  dpo.py  eval.py  export_hf.py  hf_smoke.py  import_hf.py  qwen35_compare.py  qwen35_generate.py  qwen35_llm_generate.py  qwen3_compare.py  qwen3_llm_generate.py  qwen_llm_compare.py  qwen_llm_generate.py  report.py  sample.py  sft.py  train.py
tests/: test_attention_backends.py  test_checkpoint.py  test_datasets.py  test_dpo.py  test_eval.py  test_gpt_model.py  test_hf_multimodal.py  test_hf_parity.py  test_hf_text.py  test_model.py  test_nanogpt_model.py  test_qwen_model_files.py  test_report.py  test_sft.py  (+2 more)
(+32 files in other folders)
