[project]
name = "nanoqwen"
version = "0.1.0"
description = "A small readable Qwen-style language model training harness."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
  "torch>=2.4",
  "numpy>=1.26",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "transformers>=4.51",
  "safetensors>=0.4",
]
hf = [
  "transformers>=4.51",
  "safetensors>=0.4",
]
vision = [
  "pillow>=10.0",
  "torchvision>=0.19",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
