[project]
name = "nanoqwen"
version = "0.1.0"
description = "A small readable Qwen-style language model training harness."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
  "torch==2.8.0+cu129",
  "numpy>=1.26",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "transformers>=4.51",
  "safetensors>=0.4",
]
hf = [
  "transformers>=4.51",
  "safetensors>=0.4",
]
data = [
  "pyarrow>=15.0",
  "tiktoken>=0.7",
]
vision = [
  "pillow>=10.0",
  "torchvision==0.23.0+cu129",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu129"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
